# functional-snake

./: .gitignore  Cargo.toml  README.md  testfilechange.txt
src/: direction.rs  food.rs  game.rs  gamewindowsettings.rs  main.rs  player.rs  window.rs
